--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "node ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "connect-flash": "^0.1.1",
